<resources>
    <string name="placeholder_card_number" translatable="false">0000 0000 0000 0000</string>
    <string name="enter_card_number">Enter card number</string>
    <string name="placeholder_expire_date" translatable="false">MM/YY</string>
    <string name="placeholder_cvv" translatable="false">000</string>
    <string name="placeholder_long_cvv" translatable="false">0000</string>

    <string name="mask_expire_date" translatable="false">##/##</string>
    <string name="mask_card_number" translatable="false">#### #### #### ####</string>
    <string name="mask_cvv" translatable="false">###</string>

    <string name="expires_end_label" translatable="false">EXPIRES\nEND</string>

    <string name="payments_wallets_title">OR PAY USING</string>

    <!-- Title name in payment page -->
    <string name="make_payment">Make Payment</string>
    <string name="pay_button">Pay</string>

    <!-- Dialog text to notify 3d secure page is opening -->
    <string name="launching_3d_secure">Launching 3D Secure&#8230;</string>

    <!-- Dialog message to notify payment is being submitted -->
    <string name="submitting_payment">Submitting payment&#8230;</string>

    <!-- Button used to cancel the payment process and close(dismiss) the payment view.. -->
    <string name="cancel_button">Cancel</string>

    <!-- Button used to complete the payment, once all card details have been added to the form. -->
    <string name="pay_button_title">Pay %1$s</string>

    <!-- The title of the label shown above the card number text field. The field used to enter the
    Credit or Debit card number. -->
    <string name="card_number_label_title">Card number</string>

    <!-- The title of the label shown above the card expiry date text field. The field used to enter
    the Credit or Debit card expiry date. -->
    <string name="card_expiry_date_label_title">Expiry date</string>

    <!-- The title of the label shown above the card CVV field. The field used to enter the Credit or
    Debit CVV number. -->
    <string name="card_cvv_label_title">CVV</string>

    <!-- The placeholder for the cardholder name, used to show what goes into the cardholder field in
    the card details form if no text is added to it. -->
    <string name="cardholder_field_hint">CARDHOLDER NAME</string>

    <!-- The placeholder text to show on card -->
    <string name="cardholder_label_title">CARDHOLDER NAME</string>

    <!-- The title of the label shown above the cardholder text field. The field used to enter the
    Credit or Debit card cardholder name. -->
    <string name="card_cardholder_label_title">Cardholder name</string>

    <!-- Error Message. The credit card number is not valid. -->
    <string name="error_message_pan_invalid">Invalid card number</string>

    <!-- Error Message. The credit card number length is not valid. -->
    <string name="error_message_pan_invalid_length">Invalid card number length</string>

    <!-- Error Message. The card end date is not valid. -->
    <string name="error_message_card_end_date_invalid">Expiry date is invalid.</string>

    <!-- Error Message. The card CVV is not valid. -->
    <string name="error_message_card_cvv_invalid">Security code is invalid</string>

    <!-- Error Message. The cardholder name is not valid. -->
    <string name="error_message_cardholder_name_invalid">The cardholder name is not valid</string>

    <!-- Error Message. Used when subclass does not implement a custom message. -->
    <string name="error_message_default_generic">The field content is not valid</string>

    <!-- Error Message. More than one card number field is invalid. -->
    <string name="error_message_card_numbers_multiple">Multiple card details are not valid</string>

    <!-- Error Message. Card is not supported for this transaction -->
    <string name="error_card_not_supported">Card is not supported for this transaction</string>

    <!-- Progress Message when authorizing payment url -->
    <string name="message_authorizing">Authorizing…</string>

    <!-- Progress Message when loading order details -->
    <string name="message_loading_order_details">Loading order details…</string>

    <string name="authenticating_three_ds_two">Authenticating using 3DS</string>

    <string name="cancel_payment_alert_title">Cancel Payment</string>
    <string name="cancel_payment_alert_message">Are you sure you want to cancel the payment?</string>
    <string name="cancel_alert">No</string>
    <string name="confirm_cancel_alert">Yes, Cancel</string>
    <string name="button_yes">Yes</string>
    <string name="title_activity_visa_instalments">Visa Instalments</string>

    <string name="visa_instalment_eligible">Eligible for Installments</string>
    <string name="visa_monthly_instalment">Monthly Installment: %1$s</string>
    <string name="visa_bi_monthly_instalment">Bi-Monthly Installment: %1$s</string>
    <string name="visa_weekly_instalment">Weekly Installment: %1$s</string>
    <string name="visa_bi_weekly_instalment">Bi-Weekly Installment: %1$s</string>

    <string name="visa_monthly_rate">Monthly Rate: %1$s %%</string>
    <string name="visa_bi_monthly_rate">Bi-Monthly Rate: %1$s %</string>
    <string name="visa_weekly_rate">Weekly Rate: %1$s %</string>
    <string name="visa_bi_weekly_rate">Bi-Weekly Rate: %1$s %</string>

    <string name="visa_processing_fee">Processing Fees: %1$s</string>
    <string name="visa_terms_and_conditions">Terms and Conditions</string>
    <string name="visa_read_less">Read less</string>
    <string name="visa_read_more">Read more</string>
    <string name="visa_pay_in_instalment">Pay in %1$s</string>
    <string name="visa_pay_in_full">Pay in Full</string>

    <string name="paypage_title_awaiting_partial_auth_approval">Customer confirmation</string>
    <string name="partial_auth_message_with_org">Your issuing bank %1$s has approved %2$s instead of the full amount of %3$s.</string>
    <string name="partial_auth_message">Your issuing bank has approved %1$s instead of the full amount of %2$s.</string>
    <string name="partial_auth_message_question">Do you wish to process the transaction with the reduced amount?</string>


    <string name="aani">Pay with AANI</string>
    <string name="qpay">Pay with QPay</string>
    <string name="benefit">Pay by Benefit</string>
    <string name="pay_with_tamara">Pay with Tamara</string>
    <string name="pay_with_tabby">Pay with Tabby</string>
    <string name="bnpl_unavailable">Unavailable right now. Please choose another payment method.</string>
    <string name="bnpl_below_minimum">%1$s needs a minimum order of %2$s.</string>
    <string name="qpay_express_pay_with">Pay with</string>
    <string name="aani_mobile_number">Mobile number</string>
    <string name="aani_emirates_id">Emirates ID</string>
    <string name="aani_passport_id">Passport ID</string>
    <string name="aani_email_id">Email ID</string>
    <string name="aani_alias_type">Alias type</string>
    <string name="aani_paying_amount">Paying %1$s</string>
    <string name="aani_tap_notification">Tap the notification received in your app to complete the payment.</string>
    <string name="aani_note_do_not_close">NOTE: Please do not close the app while the timer is running.</string>
    <string name="aani_qr_code">QR Code</string>
    <string name="aani_generate_qr">Generate QR Code</string>
    <string name="aani_scan_qr_to_pay">Scan QR → Approve Payment → Done</string>
    <string name="aani_generating_qr">Generating QR Code</string>
    <string name="aani_keep_modal_open">Please keep the modal open</string>
    <string name="aani_qr_expired">QR Code Expired</string>
    <string name="aani_qr_expired_message">QR codes expire after 5 minutes</string>
    <string name="aani_generate_new_qr">Generate New QR Code</string>
    <string name="aani_qr_failed">QR Generation Failed</string>
    <string name="aani_qr_failed_message">Unable to connect to payment gateway</string>
    <string name="aani_try_again">Try Again</string>
    <string name="aani_payment_timeout">Payment Timeout</string>
    <string name="aani_payment_timeout_message">Payment was not completed in time</string>

    <!-- Click to Pay -->
    <string name="click_to_pay_title">Click to Pay</string>
    <string name="click_to_pay_button">Click to Pay</string>
    <string name="click_to_pay_initializing">Initializing Click to Pay…</string>
    <string name="click_to_pay_processing">Processing payment…</string>
    <string name="click_to_pay_select_card">Select a card</string>
    <string name="click_to_pay_verify_identity">Verify your identity</string>
    <string name="click_to_pay_enter_otp">Enter the code sent to %1$s</string>
    <string name="click_to_pay_add_card">Add a new card</string>
    <string name="click_to_pay_pay_with">Pay with Click to Pay</string>

    <!-- Unified Payment Screen -->
    <string name="payment_separator_text">Or select your payment options</string>
    <string name="pay_by_card">Pay by Card</string>
    <string name="click_to_pay_section_title">Click to Pay</string>
    <string name="pay_with_click_to_pay">Pay with Click to Pay</string>
    <string name="powered_by">Powered by</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="samsung_pay_button">Samsung Pay</string>

    <string name="add_card_manually">Add card manually</string>
    <string name="use_credit_or_debit_card">Use Credit Or Debit Card</string>
    <string name="select_other_payment_options">Select Other Payment Options</string>
    <string name="terms_agreement_text">By clicking \"Pay\", you agree to the terms and conditions and authorize this transaction.</string>
    <string name="google_pay_button">Google Pay</string>
    <string name="pay_with_google_pay">Pay with Google Pay</string>
    <string name="pay_with_samsung_pay">Pay with Samsung Pay</string>
    <string name="pay_with_aani">Request to Pay</string>
    <string name="or_select_payment_options">Other Payment Options</string>
    <string name="expiration_date_label">Expiration date</string>
    <string name="security_code_label">Security code</string>
    <string name="name_on_card_label">Name on card</string>
    <string name="name_on_card_placeholder">Enter name on card</string>
    <string name="order_summary">Order summary</string>
    <string name="order_items_header">Item(s)</string>
    <string name="order_amount_header">Amount</string>
    <string name="whats_cvv">What\'s CVV?</string>
    <string name="cvv_tooltip">Security code can be located on the back of the card</string>
    <string name="saved_cards_title">Saved Cards</string>
    <string name="saved_card_enter_cvv">Enter security code</string>
    <string name="order_items_title">Order details</string>

    <!-- Payment Result Screen -->
    <string name="payment_result_success_title">You paid %1$s</string>
    <string name="payment_result_success_title_no_amount">Payment Successful</string>
    <string name="payment_result_failure_title">Something Went Wrong</string>
    <string name="payment_result_success_subtitle">Thank you! your payment has been received.</string>
    <string name="payment_result_failure_subtitle">Please try again later.</string>
    <string name="payment_result_transaction_id">Reference number</string>
    <string name="payment_result_reference_number">Reference Number</string>
    <string name="payment_result_date_time">Transaction Date</string>
    <string name="payment_result_done">Done</string>
    <string name="select_payment_option_validation">Please select a payment option to proceed</string>
    <string name="card_already_saved">This card is already saved</string>

</resources>
